--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,23 @@
-# Node modules
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Build output
-.next/
-out/
-build/
-
-# Logs
-*.log
-
-# Dependency directories
-.pnp/
+# dependencies
+/node_modules
+/.pnp
 .pnp.js
 
-# Environment variables
-.env
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-
-# chshe folder
-chshe/
-
-# MacOS
-.DS_Store
-
-# Windows
-Thumbs.db
-ehthumbs.db
-
-# Linux
-*~
-
-# IDE and Editor folders
-.vscode/
-.idea/
-
-# Yarn and npm logs
-yarn-error.log
-npm-debug.log
-
-# Next.js specific
-*.next/
-.next/
-
-# Next.js build artifacts
-out/
-build/
-
-# Tailwind CSS configuration (optional, if you want to ignore)
-tailwind.config.js
-
-# VSCode settings
-.vscode/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
