--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
     "react-moment": "^1.1.3",
     "react-paginate": "^8.3.0",
