--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-confirm-alert": "^3.0.6",
@@ -15,6 +16,7 @@
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
+    "sweetalert2": "^11.17.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
