--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.10.9",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-moment": "^1.1.3",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.1.3",
