--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL= "http://20.244.44.95:5000"
+# REACT_APP_API_URL= "http://20.244.44.95:5000"
+REACT_APP_API_URL= "http://localhost:4000"
