--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
