--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.3",
     "sweetalert2": "^11.17.2",
     "web-vitals": "^4.2.4"
