--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # REACT_APP_API_URL= "http://20.244.44.95:5000"
-REACT_APP_API_URL= "http://localhost:4000"
+# REACT_APP_API_URL= "http://localhost:4000"
+REACT_APP_API_URL= "http://103.39.131.9:8050"
